Addresses FCREPO-466 (Shell scripts don't properly pass through args with spaces). This was fixed with a rehaul of the client and server shell and batch scripts, which reduces duplication considerably.  Scripts now also return status codes/error levels consistently.
Also found and fixed another test/demo object (demo:25) that depends on an external 
host (FCREPO-457).  The fix for this was to include the required stylesheet in the
fedora-demo webapp rather than pointing to fedora-commons.org/services/fop/tei.xsl.